Update Equity Research Classification.ipynb
typo

--- a/Equity Research Classification.ipynb
+++ b/Equity Research Classification.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rating Explains\n",
+    "### Ratings Explained\n",
     "Ratings are extracted from equity earnings report. Ratings ranges from -3 to 13. The ratings first start with 0 as neutral, -1 (sell), -2 (strong sell), -3 (upgrade from sell to strong sell). Each rating is distinct. I've also flagged those with a change in opinion, such as upgrade/downgrades of rating."
    ]
   },
